Better readme.md

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
-  }
+  },
+  "repository": "https://github.com/franklang/node-docker.git"
 }
-
